--- a/vendor.conf
+++ b/vendor.conf
@@ -36,11 +36,11 @@ github.com/gorilla/websocket                  6eb6ad425a89
 github.com/aws/aws-sdk-go                     d2d8f8c33f49af99cdd889f6897ffd525c520407
 github.com/heptio/authenticator               d282f87a19728018b67d80754bcb3e9b0457403f
 github.com/mcuadros/go-version                6d5863ca60fa6fe914b5fd43ed8533d7567c5b0b
-github.com/robfig/cron                        v1.1
+github.com/robfig/cron                        v1.1.0
 
 github.com/rancher/rdns-server                bf662911db6acce4d6a85d2878653f68413b9176
 github.com/rancher/norman                     f5744043a6fb81330ee78e4f7a0f04d0ef65c9f1
-github.com/rancher/types                      df0c8d4f7479ce0e194d7df55bfd6713262fd8f8
+github.com/rancher/types                      5f0739607cf23e37b009cf4e68ea0fa3506b1c9c https://github.com/leodotcloud/types.git
 github.com/rancher/kontainer-engine           19ba425dd3d94c7dbf2d6b7cb6810c57966c2e1a
 github.com/rancher/rke                        v0.3.0-rc3
 
